# Advent-of-Code

./: Cargo.toml  justfile
2024/: .gitignore  Cargo.toml  benchmarks.txt  day-01.bench.txt  justfile
2024/daily-template/: Cargo.toml
2024/daily-template/src/: part1.rs  part2.rs
2024/day-01/: Cargo.toml  bench.txt
2024/day-01/benches/: benchmarks.rs
2024/day-01/src/: part1.rs  part2.rs
2024/day-02/: bench.txt
2024/day-02/src/: part1.rs  part2.rs
2024/day-03/: Cargo.toml  bench.txt
2024/day-03/benches/: benchmarks.rs
2024/day-03/src/: part1.rs  part2.rs
2024/day-04/: Cargo.toml  bench.txt
2024/day-04/src/: grid.rs  lib.rs  part1.rs  part2.rs  vec.rs
2024/day-05/: Cargo.toml  bench.txt
2024/day-05/src/: part1.rs  part2.rs
2024/day-06/: Cargo.toml  bench.txt
2024/day-06/src/: part1.rs  part2.rs
2024/day-07/: Cargo.toml  bench.txt
2024/day-07/benches/: benchmarks.rs
2024/day-07/src/: part1.rs  part2.rs
2024/day-08/: Cargo.toml
2024/day-08/benches/: benchmarks.rs
2024/scripts/: get-aoc-input.rs
2025/: .gitignore  Cargo.toml  benchmarks.txt  justfile
2025/daily-template/: Cargo.toml
2025/day-01/: Cargo.toml  bench.txt
2025/day-02/: Cargo.toml  bench.txt
2025/day-03/: Cargo.toml  bench.txt
2025/day-04/: Cargo.toml  bench.txt
2025/day-05/: Cargo.toml  bench.txt
2025/day-06/: Cargo.toml  bench.txt
2025/day-07/: Cargo.toml  bench.txt
2025/day-08/: Cargo.toml  bench.txt
2025/day-09/: Cargo.toml  bench.txt
2025/day-10/: Cargo.toml  bench.txt
2025/day-11/: Cargo.toml  bench.txt
2025/scripts/: get-aoc-input.rs
(+85 files in other folders)
